--- a/flowchart/myflow.html
+++ b/flowchart/myflow.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>flowchart.js ¡¤ Playground</title>
+        <title>flowchart.js-Playground</title>
         <style type="text/css">
           .end-element { background-color : #FFCCFF; }
         </style>
@@ -11,13 +11,11 @@
         <script src="http://flowchart.js.org/flowchart-latest.js"></script>
         <!-- <script src="../release/flowchart.min.js"></script> -->
         <script>
-
-            window.onload = function () {
+			window.onload = function () {
                 var btn = document.getElementById("run"),
                     cd = document.getElementById("code"),
                     chart;
-
-                (btn.onclick = function () {
+				var dodraw = function () {
                     var code = cd.value;
 
                     if (chart) {
@@ -28,11 +26,11 @@
                     chart.drawSVG('canvas', {
                       // 'x': 30,
                       // 'y': 50,
-                      'line-width': 3,
-                      'maxWidth': 3,//ensures the flowcharts fits within a certian width
+                      'line-width': 2,
+                      'maxWidth': 2,//ensures the flowcharts fits within a certian width
                       'line-length': 50,
                       'text-margin': 10,
-                      'font-size': 14,
+                      'font-size': 10,
                       'font': 'normal',
                       'font-family': 'Helvetica',
                       'font-weight': 'normal',
@@ -43,7 +41,7 @@
                       'yes-text': 'yes',
                       'no-text': 'no',
                       'arrow-end': 'block',
-                      'scale': 1,
+                      'scale': 0,
                       'symbols': {
                         'start': {
                           'font-color': 'red',
@@ -68,8 +66,9 @@
                     $('[id^=sub1]').click(function(){
                       alert('info here');
                     });
-                })();
-
+                };
+                (btn.onclick = dodraw)();
+				(cd.onchange = dodraw)();
             };
         </script>
     </head>
