--- a/my_tools.html
+++ b/my_tools.html
@@ -110,7 +110,8 @@ criteria type: <br>
 <br>
 key: <input id="raw_uuid" size="30" onchange='build_criteria();' onkeyup='build_criteria();' /><br>
 criteria: <input id="mongo_criteria" size="60" /><br>
-projection:  <input id="mongo_projection" value="{'standardized_attrs.mls_number':1,'standardized_attrs.mls_city':1, 'standardized_attrs.mls_zip_code':1, 'standardized_attrs.mls_state':1, 'standardized_attrs.mls_address':1, 'standardized_attrs.mls_street_name':1, 'standardized_attrs.mls_street_number':1, 'standardized_attrs.mls_street_direction':1, 'standardized_attrs.mls_street_designator':1}" size="100" /><br>
+projection:  <input id="mongo_projection" 
+value="{'standardized_attrs.mls_number':1,'standardized_attrs.mls_city':1, 'standardized_attrs.mls_zip_code':1, 'standardized_attrs.mls_state':1, 'standardized_attrs.mls_subpremise':1,'standardized_attrs.mls_address':1, 'standardized_attrs.mls_street_name':1, 'standardized_attrs.mls_street_number':1, 'standardized_attrs.mls_street_direction':1, 'standardized_attrs.mls_street_designator':1}" size="100" /><br>
 
 
 
