--- a/view_report/report.html
+++ b/view_report/report.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"> 
 <head> 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
-<title>getJSON获取数据</title> 
+<title>Report</title> 
 <script type="text/javascript" src="jquery-1.8.2.min.js"></script>
 <script type="text/javascript" src="data/report-2017.11.13.js"></script>
 <style type="text/css"> 
@@ -16,23 +16,38 @@
 .h_graph .g_bar span{position:absolute;top:0;right:-50px;width:40px;color:#767676;line-height:20px}
 </style> 
 <script type = "text/javascript" >
+function get_max_cnt(report_type){
+	var max_cnt = 0;
+	var all_keys = Object.keys(reportData);
+	for(var i = 0;i < all_keys.length; i++) {
+		state = all_keys[i];
+		if (state == 'total' || state=='_id'){
+			continue;
+		}
+		if (reportData[state][report_type] > max_cnt){
+			max_cnt = reportData[state][report_type];
+		}
+	}
+	return max_cnt;
+}
 function show_chart(){
-  full_with_cnt = 3000
-  data_html = ''
+  data_html = '';
+  report_type = $('#report_type').val();
+  full_width_cnt = get_max_cnt(report_type)/0.9;
   // reportData is a var defined in the js file which load in head js files
   datestr = reportData['_id'];
   $('#datestr').val(datestr);
-  $('#total').html(reportData['total'].new_property);
+  $('#total').html(reportData['total'][report_type]);
   var all_keys = Object.keys(reportData);
   for(var i = 0;i < all_keys.length; i++) {
 	state = all_keys[i];
 	if (state == 'total' || state=='_id'){
 	    continue;
 	}
-	new_property_cnt = reportData[state].new_property
+	cnt = reportData[state][report_type];
 	//alert(all_keys[i]);
-	width = (new_property_cnt/full_with_cnt)*100
-	data_html += '<li><span class="g_term">'+state+'</span><span class="g_bar" style="width:'+width+'%"><span>'+new_property_cnt+'</span></span></li>';
+	width = (cnt/full_width_cnt)*100
+	data_html += '<li><span class="g_term">'+state+'</span><span class="g_bar" style="width:'+width+'%"><span>'+cnt+'</span></span></li>';
   }
   $('#chart').html(data_html);
 }
@@ -44,7 +59,6 @@ $(function (){
 	      show_chart();
 	  }
 	  rdate = $('#datestr').val();
-	  
 	  js.src = "data/report-"+rdate+".js";
 	  document.head.appendChild(js);
 	  
@@ -64,7 +78,13 @@ $(function (){
 </div>
 -->
 <div style="font-weight:bold;color:#767676;font-size:17px;font-family:Tahoma, Geneva, sans-serif;list-style:none">
-	New Property Count for All states on Date: <input id='datestr' /><input type="button" value="show" id="btn"/> <br>
+	Association report for all states on date: <input id='datestr' />
+	<select id='report_type' onchange='show_chart()'>
+		<option value='new_property' selected>new_property</option>
+		<option value='url_change'>url_change</option>
+		<option value='total_asso_listings'>total_asso_listings</option>
+	</select>
+	<input type="button" value="show" id="btn"/> <br>
 	Total: <span id="total"></span>
 <div>
 <br>
