--- a/flowchart/myflow2.html
+++ b/flowchart/myflow2.html
@@ -273,8 +273,8 @@ function join_node3(from_point, to_point, txt, line_color){
 }
 </script>
    <body>
-	<input type="hidden" id="node_list" value="1-2-3-4-9-12-11-20-21-24-25-15-16-17-18" />
-	node list: 1-2-3-4-9-12-11-20-21-24-25-15-16-17-18 <font id="xycoordinates"></font> <br>
+	<input type="hidden" id="node_list" value="{{rs.node_list}}" />
+	node list: {{rs.node_list}}<br>
 	
    	  <canvas width="1300" height="1200" id="myflowchart" style="border:0px solid #000000;" onmousemove="" onmouseout="">     
    	         your browser not suuport H5 canvas
