--- a/view_report/report.html
+++ b/view_report/report.html
@@ -1,75 +1,146 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
-<html xmlns="http://www.w3.org/1999/xhtml"> 
-<head> 
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
-<title>Report</title> 
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>Report</title>
 <script type="text/javascript" src="jquery-1.8.2.min.js"></script>
-<script type="text/javascript" src="data/report-2017.11.13.js"></script>
-<style type="text/css"> 
-#divframe{ border:1px solid #999; width:500px; margin:0 auto;} 
-.loadTitle{ background:#CCC; height:30px;} 
-	
-.h_graph ul{margin:0 50px 0 60px;padding:1px 0 0 0;border:1px solid #ddd;border-top:0;border-right:0;font-size:11px;font-family:Tahoma, Geneva, sans-serif;list-style:none}
-.h_graph li{position:relative;margin:10px 0;vertical-align:top;white-space:nowrap}
-.h_graph .g_term{position:absolute;top:0;left:-60px;width:50px;font-weight:bold;color:#767676;line-height:20px;text-align:right}
-.h_graph .g_bar{display:inline-block;position:relative;height:20px;border:1px solid #ccc;border-left:0;background:#79FF79}
-.h_graph .g_bar span{position:absolute;top:0;right:-50px;width:40px;color:#767676;line-height:20px}
-</style> 
-<script type = "text/javascript" >
-function get_max_cnt(report_type){
-	var max_cnt = 0;
-	var all_keys = Object.keys(reportData);
-	for(var i = 0;i < all_keys.length; i++) {
-		state = all_keys[i];
-		if (state == 'total' || state=='_id'){
-			continue;
-		}
-		if (reportData[state][report_type] > max_cnt){
-			max_cnt = reportData[state][report_type];
-		}
-	}
-	return max_cnt;
+<!-- <script type="text/javascript" src="data/report-2017.11.13.js"></script> -->
+<style type="text/css">
+#divframe {
+	border: 1px solid #999;
+	width: 500px;
+	margin: 0 auto;
 }
-function show_chart(){
-  data_html = '';
-  report_type = $('#report_type').val();
-  full_width_cnt = get_max_cnt(report_type)/0.9;
-  // reportData is a var defined in the js file which load in head js files
-  datestr = reportData['_id'];
-  $('#datestr').val(datestr);
-  $('#total').html(reportData['total'][report_type]);
-  var all_keys = Object.keys(reportData);
-  for(var i = 0;i < all_keys.length; i++) {
-	state = all_keys[i];
-	if (state == 'total' || state=='_id'){
-	    continue;
-	}
-	cnt = reportData[state][report_type];
-	//alert(all_keys[i]);
-	width = (cnt/full_width_cnt)*100
-	data_html += '<li><span class="g_term">'+state+'</span><span class="g_bar" style="width:'+width+'%"><span>'+cnt+'</span></span></li>';
-  }
-  $('#chart').html(data_html);
-}
-	
-$(function (){
-  $("#btn").click(function (){
-	  var js = document.createElement('script');
-	  js.onload = function(){
-	      show_chart();
-	  }
-	  rdate = $('#datestr').val();
-	  js.src = "data/report-"+rdate+".js";
-	  document.head.appendChild(js);
-	  
-  })
-  show_chart();
-})
 
-</script> 
-</head> 
-<body> 
-<!--<div id="divframe"> 
+.loadTitle {
+	background: #CCC;
+	height: 30px;
+}
+
+.h_graph ul {
+	margin: 0 50px 0 60px;
+	padding: 1px 0 0 0;
+	border: 1px solid #ddd;
+	border-top: 0;
+	border-right: 0;
+	font-size: 11px;
+	font-family: Tahoma, Geneva, sans-serif;
+	list-style: none
+}
+
+.h_graph li {
+	position: relative;
+	margin: 10px 0;
+	vertical-align: top;
+	white-space: nowrap
+}
+
+.h_graph .g_term {
+	position: absolute;
+	top: 0;
+	left: -60px;
+	width: 50px;
+	font-weight: bold;
+	color: #767676;
+	line-height: 20px;
+	text-align: right
+}
+
+.h_graph .g_bar {
+	display: inline-block;
+	position: relative;
+	height: 20px;
+	border: 1px solid #ccc;
+	border-left: 0;
+	background: #79FF79
+}
+
+.h_graph .g_bar span {
+	position: absolute;
+	top: 0;
+	right: -50px;
+	width: 40px;
+	color: #767676;
+	line-height: 20px
+}
+</style>
+<script type="text/javascript">
+	function get_max_cnt(report_type) {
+		var max_cnt = 0;
+		var all_keys = Object.keys(reportData);
+		for (var i = 0; i < all_keys.length; i++) {
+			state = all_keys[i];
+			if (state == 'total' || state == '_id') {
+				continue;
+			}
+			if (reportData[state][report_type] > max_cnt) {
+				max_cnt = reportData[state][report_type];
+			}
+		}
+		return max_cnt;
+	}
+
+	function show_chart() {
+		data_html = '';
+		report_type = $('#report_type').val();
+		
+		// reportData is a var defined in the js file which load in head js files
+		datestr = reportData['_id'];
+		$('#datestr').val(datestr);
+		$('#total').html(reportData['total'][report_type]);
+		var all_keys = Object.keys(reportData);
+		var value_list = new Array();
+		var max_cnt = 0;
+		for (var i = 0; i < all_keys.length; i++) {
+			state = all_keys[i];
+			if (state == 'total' || state == '_id') {
+				continue;
+			}
+			val = reportData[state][report_type];
+			value_list.push({'name':state, 'value':val});
+			if (val > max_cnt) {
+				max_cnt = val;
+			}
+		}
+		value_list.sort(function(a, b){return b['value']-a['value'];});
+		full_width_cnt = max_cnt / 0.9;
+		display_chart(value_list, full_width_cnt);
+	}
+	
+	function display_chart(value_list, full_width_cnt){
+		for (var i = 0; i < value_list.length; i++) {
+			state = value_list[i]['name'];
+			cnt = value_list[i]['value'];
+			//alert(all_keys[i]);
+			width = (cnt / full_width_cnt) * 100
+			data_html += '<li><span class="g_term">' + state
+					+ '</span><span class="g_bar" style="width:' + width
+					+ '%"><span>' + cnt + '</span></span></li>';
+		}
+		$('#chart').html(data_html);
+	}
+
+	$(function() {
+		$("#btn").click(function() {
+			var js = document.createElement('script');
+			js.onload = function() {
+				show_chart();
+			}
+			rdate = $('#datestr').val();
+			js.src = "data/report-" + rdate + ".js";
+			document.head.appendChild(js);
+
+		});
+		var today = new Date();
+		var yestoday = new Date(today.getTime()-24*3600*1000);
+		ds = yestoday.getFullYear()+'.'+(yestoday.getMonth()+1)+'.'+yestoday.getDate();
+		$('#datestr').val(ds);
+		$("#btn").click();
+	})
+</script>
+</head>
+<body>
+	<!--<div id="divframe"> 
 <div class="loadTitle"> 
 <input type="button" value="show" id="btn1"/> 
 </div> 
@@ -77,22 +148,21 @@ $(function (){
 </div> 
 </div>
 -->
-<div style="font-weight:bold;color:#767676;font-size:17px;font-family:Tahoma, Geneva, sans-serif;list-style:none">
-	Association report for all states on date: <input id='datestr' />
-	<select id='report_type' onchange='show_chart()'>
-		<option value='new_property' selected>new_property</option>
-		<option value='url_change'>url_change</option>
-		<option value='total_asso_listings'>total_asso_listings</option>
-	</select>
-	<input type="button" value="show" id="btn"/> <br>
-	Total: <span id="total"></span>
-<div>
-<br>
-<div class="h_graph">
-    <ul id='chart'>
-    <li><span class="g_term">loading...</span></li>
-    </ul>
+<div style="font-weight: bold; color: #767676; font-size: 17px; font-family: Tahoma, Geneva, sans-serif; list-style: none">
+Association report for all states on date: <input id='datestr' /> 
+<select id='report_type' onchange='show_chart()'>
+	<option value='new_property' selected>new_property</option>
+	<option value='url_change'>url_change</option>
+	<option value='total_asso_listings'>total_asso_listings</option>
+</select> 
+<input type="button" value="show" id="btn" /> <br/> 
+Total: <span id="total"></span>
 </div>
-	
-</body> 
-</html> 
+<br/>
+	<div class="h_graph">
+		<ul id='chart'>
+			<li><span class="g_term">loading...</span></li>
+		</ul>
+	</div>
+</body>
+</html>
