fix date string format

--- a/view_report/report.html
+++ b/view_report/report.html
@@ -124,6 +124,14 @@
 		$("#btn").click();
 		setTimeout("show()", 2000);
 	}
+	
+	function num_str(val){
+		if (val < 10){
+			return '0'+val;
+		}else{
+			return ''+val;
+		}
+	}
 
 	$(function() {
 		$("#btn").click(function() {
@@ -138,13 +146,9 @@
 		});
 		var today = new Date();
 		var yestoday = new Date(today.getTime()-24*3600*1000);
-		ds = yestoday.getFullYear()+'.'+(yestoday.getMonth()+1)
 		date_num = yestoday.getDate();
-		if (date_num < 10){
-			ds += '.0'+date_num;
-		}else{
-			ds += '.'+date_num;
-		}
+		month_num = yestoday.getMonth()+1;
+		ds = yestoday.getFullYear() +'.' + num_str(month_num) + '.' + num_str(date_num);
 		$('#datestr').val(ds);
 		//show();
 		$("#btn").click();
