add emacs notes

--- a/view_photo.html
+++ b/view_photo.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>view RETS photo</title>
+<title>view photos</title>
 <script type="text/javascript" language="JavaScript">
 function next_photo(delta){
 	var cid = document.getElementById("pid").innerHTML;
