--- a/my_tools.html
+++ b/my_tools.html
@@ -9,20 +9,23 @@
             return s;
         }
         function convert(){
-            var rs="(";
+        	var cmap = {'(': ')', '[':']'};
+            var c =document.getElementById("collection").value;
+            var quote = document.getElementById("quote").value;
             var rows = document.getElementById("src_str").value;
             var lines = rows.split("\n");
             var i = 0;
+            var rs = c+'';
             for(i=0;i<lines.length-1;i++){
                 if(trim(lines[i])!=''){
-                    rs += "'"+trim(lines[i])+"',";
+                    rs += quote+trim(lines[i])+quote + ",";
                     if((i+1)%3==0){
                         rs += "\n";
                     }
                 }
             }
             if(trim(lines[i]) != ''){
-                rs += "'"+ trim(lines[i])+"')";
+                rs += quote+ trim(lines[i])+quote + cmap[c];
             }
             
             document.getElementById("rs_str").value=rs;
@@ -89,6 +92,7 @@
 <textarea rows="25" cols="50" name="" id="src_str" ondblclick="javascript:document.getElementById('src_str').value='';" on></textarea>
 </td>
 <td>
+<input name="collection" id="collection" value="(" size="1" width="1"/> <input name="quote" id="quote" value="'" size="1" width="1"/> <br><br>
 <input type="button" name="" value="Wrap" onclick="convert();" /> <br><br>
 <input type="button" name="" value="Join" onclick="convert_csv();" /><input name="delimiter" id="join_delimiter" value="," size="1" width="1"/> <br><br>
 <input type="button" name="" value=" << " onclick="convert_return();" />
@@ -102,21 +106,6 @@
 <div id='item_count'> </div>
 
 <hr>
-
-criteria type: <br>
- <input type="radio" name="ctype" value="raw_uuid" onclick="build_criteria()" />  raw_uuid<br>
- <input type="radio" name="ctype" value='mls_sysid' checked=true onclick="build_criteria()" /> sysid<br> 
-<input type="radio" name="ctype" value='standardized_attrs.mls_number' onclick="build_criteria()" /> mls_number
-<br>
-key: <input id="raw_uuid" size="30" onchange='build_criteria();' onkeyup='build_criteria();' /><br>
-criteria: <input id="mongo_criteria" size="60" /><br>
-projection:  <input id="mongo_projection" 
-value="{'standardized_attrs.mls_number':1,'standardized_attrs.mls_city':1, 'standardized_attrs.mls_zip_code':1, 'standardized_attrs.mls_state':1, 'standardized_attrs.mls_subpremise':1,'standardized_attrs.mls_address':1, 'standardized_attrs.mls_street_name':1, 'standardized_attrs.mls_street_number':1, 'standardized_attrs.mls_street_direction':1, 'standardized_attrs.mls_street_designator':1}" size="100" /><br>
-
-
-
-<!-- {'type':'PROPERTY','mls_sysid':{'$in':['71893294','71967400','72010736','72001284','71971239','71960901','71926348','71983799','71931820']}} -->
-
 <br>
 <br>
 <p>
